--- a/GetOnThatBus/GetOnThatBus-Info.plist
+++ b/GetOnThatBus/GetOnThatBus-Info.plist
@@ -24,6 +24,25 @@
 	<string>1.0</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+
+
+
+
+    <key>NSAppTransportSecurity</key>
+    <dict>
+        <!--Include to allow all connections (DANGER)-->
+        <key>NSAllowsArbitraryLoads</key>
+        <true/>
+    </dict>
+
+
+
+
+
+
+
+
+
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
